--- a/starterTemplate/starterTemplate.csproj
+++ b/starterTemplate/starterTemplate.csproj
@@ -9,9 +9,17 @@
         <Deterministic>false</Deterministic>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection"
-                          Version="8.0.0" />
-    </ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+</ItemGroup>
+
+<ItemGroup>
+    <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+</ItemGroup>
     <Target Name="PackageRelease"
             AfterTargets="Build"
             Condition=" '$(Configuration)' == 'Release' ">
